ajuste pra vercel

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,5 @@
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import 'variables', 'colors', 'components', 'darkmode';
+@use 'node_modules/bootstrap/scss/bootstrap';
+@use 'variables', 'colors', 'components', 'darkmode';
 
 /*
 BS5
